--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,55 @@
 version: '3.8'
 services:
-  db:
-    image: postgres:15
-    container_name: my_postgres_db
-    restart: always
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
-    volumes:
-      - ./initdb-postgres:/docker-entrypoint-initdb.d
-      - postgres_data:/var/lib/postgresql/data
+    backend:
+        hostname: backend
+        build:
+            context: .
+            dockerfile: Dockerfile_backend
+        container_name: backend
+        command: poetry run uvicorn backend.main:app --host 0.0.0.0 --port ${BACKEND_PORT}
+        healthcheck:
+            test: curl --fail http://localhost:${BACKEND_PORT}/api/v1/health || exit 1
+            interval: 600s
+            timeout: 5s
+            retries: 3
+            start_period: 3s
+        volumes:
+          - ./backend:/app/backend
+        ports:
+            - "${BACKEND_PORT}:${BACKEND_PORT}"
+        env_file:
+            - .env
+        restart: always
+        depends_on:
+            - db
+            - milvus
 
-volumes:
-  postgres_data:
+    db:
+        hostname: db
+        image: postgres:15
+        container_name: database
+        volumes:
+            - ./data/db:/var/lib/postgresql/data
+        ports:
+            - "${DATABASE_PORT}:5432"
+        env_file:
+            - .env
+        environment:
+            POSTGRES_DB: ${DATABASE_NAME}
+            POSTGRES_USER: ${DATABASE_USERNAME}
+            POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    
+    milvus:
+        image: milvusdb/milvus:v2.0.0
+        container_name: milvus
+        environment:
+            - MILVUS_LOG_LEVEL=debug
+        ports:
+            - "${MILVUS_PORT}:${MILVUS_PORT}"
+        volumes:
+            - ./data/milvus:/var/lib/milvus
+        healthcheck:
+            test: curl --fail http://localhost:${MILVUS_PORT} || exit 1
+            interval: 60s
+            timeout: 5s
+            retries: 5
