--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ ruff = "^0.6.5"
 pytest = "^8.3.3"
 pre-commit = "^3.8.0"
 sqlalchemy = "^2.0.35"
+gunicorn = "^23.0.0"
+pydantic-settings = "^2.5.2"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
