--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sqlalchemy = "^2.0.35"
 gunicorn = "^23.0.0"
 pydantic-settings = "^2.5.2"
 psycopg2-binary = "^2.9.9"
+pymilvus = "^2.4.6"
 
 
 [build-system]
