--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ gunicorn = "^23.0.0"
 pydantic-settings = "^2.5.2"
 psycopg2-binary = "^2.9.9"
 pymilvus = "^2.4.6"
+instructor = "^1.4.3"
 
 
 [build-system]
