--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-settings = "^2.5.2"
 psycopg2-binary = "^2.9.9"
 pymilvus = "^2.4.6"
 instructor = "^1.4.3"
+numpy = "^2.1.1"
 
 
 [build-system]
