--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2-binary = "^2.9.9"
 pymilvus = "^2.4.6"
 instructor = "^1.4.3"
 numpy = "^2.1.1"
+streamlit = "^1.38.0"
 
 
 [build-system]
