--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -2,9 +2,9 @@
 FROM python:3.12-slim
 
 COPY ./backend /app/backend
+COPY ./commons /app/commons
+COPY ./sample /app/sample
 COPY poetry.lock pyproject.toml /app/
-
-
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc curl && \
