--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
         restart: always
         depends_on:
             - db
-            - milvus
+#            - milvus
 
     db:
         hostname: db
@@ -30,7 +30,7 @@ services:
         container_name: database
         volumes:
             - ./data/db:/var/lib/postgresql/data
-            - ./sql/marketing_company:/docker-entrypoint-initdb.d
+#            - ./sql/marketing_company:/docker-entrypoint-initdb.d
         ports:
             - "${DATABASE_PORT}:5432"
         env_file:
@@ -40,17 +40,17 @@ services:
             POSTGRES_USER: ${DATABASE_USERNAME}
             POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     
-    milvus:
-        image: milvusdb/milvus:v2.0.0
-        container_name: milvus
-        environment:
-            - MILVUS_LOG_LEVEL=debug
-        ports:
-            - "${MILVUS_PORT}:${MILVUS_PORT}"
-        volumes:
-            - ./data/milvus:/var/lib/milvus
-        healthcheck:
-            test: curl --fail http://localhost:${MILVUS_PORT} || exit 1
-            interval: 60s
-            timeout: 5s
-            retries: 5
+#    milvus:
+#        image: milvusdb/milvus:v2.0.0
+#        container_name: milvus
+#        environment:
+#            - MILVUS_LOG_LEVEL=debug
+#        ports:
+#            - "${MILVUS_PORT}:${MILVUS_PORT}"
+#        volumes:
+#            - ./data/milvus:/var/lib/milvus
+#        healthcheck:
+#            test: curl --fail http://localhost:${MILVUS_PORT} || exit 1
+#            interval: 60s
+#            timeout: 5s
+#            retries: 5
