--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pymilvus = "^2.4.6"
 instructor = "^1.4.3"
 numpy = "^2.1.1"
 streamlit = "^1.38.0"
+plotly = "^5.24.1"
+altair = "^5.4.1"
 
 
 [build-system]
