--- a/Dockerfile_frontend
+++ b/Dockerfile_frontend
@@ -6,6 +6,7 @@ RUN pip install poetry
 COPY ./frontend /app/frontend
 COPY ./commons /app/commons
 COPY ./app.py /app/app.py
+COPY ./sample /app/sample
 COPY poetry.lock pyproject.toml /app/
 
 ENV PATH="/root/.local/bin:$PATH"
