corrected and added readm.me

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,6 @@
 API_VERSION = 1
 APP_NAME = TrainingProgram
-ENVIRONMENT = "compose"
+ENVIRONMENT = "dev"
 
 # Backend configuration
 BACKEND_HOSTNAME=backend
@@ -10,17 +10,17 @@ BACKEND_PORT=8000
 FRONTEND_PORT=8501
 
 # PostgreSQL configuration
-DATABASE_DIALECT=postgresql
 DATABASE_HOSTNAME=db
 DATABASE_PORT=5432
+DATABASE_DIALECT=postgresql
 DATABASE_NAME=mydatabase
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=yourpassword
 
 # Embedding model
 EMBEDDING_PROVIDER_MODEL=openai
-EMBEDDING_DIMENSION=1536
 EMBEDDING_MODEL=text-embedding-3-small
+EMBEDDING_DIMENSION=1536
 EMBEDDING_KEY=
 
 # LLM model
