delete white spaces in the variables

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,6 @@
-API_VERSION = 1
-APP_NAME = TrainingProgram
-ENVIRONMENT = "dev"
+API_VERSION=1
+APP_NAME=TrainingProgram
+ENVIRONMENT="dev"
 
 # Backend configuration
 BACKEND_HOSTNAME=backend
