added all the logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
             start_period: 30s
         volumes:
           - ./backend:/app/backend
+          - ./logs/:app/logs
         ports:
             - "${BACKEND_PORT}:${BACKEND_PORT}"
         env_file:
